# ARMCortexM-CppLib

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_modern.txt  CMakePresets.json  LICENCE  README.md  arm_none_eabi_gcc.cmake  arm_none_eabi_llvm.cmake  barriers.hpp  bit_utils.hpp  misc.hpp  utils.hpp  vcpkg-configuration.json
.cspell/: armcortexmlib-dictionary.txt
.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh  verify-image.sh
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  ci_pr_validation.yml  test.yml
asm_tests/: CMakeLists.txt  example.cpp  lit.cfg.py  lit.cfg.py.in
asm_tests/utils_tests/: CMakeLists.txt  test_const_int_ceil_div.cpp  test_runtime_int_ceil_div.cpp
cmake/: ARMCortexM-CppLibConfig.cmake.in  README.md
cortexm0/: barriers.hpp  exceptions.hpp  intrinsics.hpp  misc.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
cortexm0/examples/: intrinsics_example.cpp
cortexm0plus/: barriers.hpp  exceptions.hpp  misc.hpp  mpu.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
cortexm1/: exceptions.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
cortexm3/: bitband.hpp  exceptions.hpp  mpu.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
include/armcortex/: barriers.hpp  bit_operations.hpp  bit_utils.hpp  byte_reversing.hpp  debugging.hpp  exceptions.hpp  exclusive_access.hpp  hints.hpp  intrinsics.hpp  mpu.hpp  nvic.hpp  power_management.hpp  saturation.hpp  scb.hpp  scnscb.hpp  special_regs.hpp  systick.hpp
include/armcortex/intrinsics/: bit_operations.hpp  debugging.hpp  dsp.hpp  events.hpp  exceptions.hpp  exclusive_access.hpp  saturation.hpp
include/armcortex/m0/: scb.hpp  special_regs.hpp
include/armcortex/m0plus/: mpu.hpp  nvic.hpp  scb.hpp  special_regs.hpp
include/armcortex/m1/: nvic.hpp  scb.hpp  special_regs.hpp
include/armcortex/m3/: exceptions.hpp  mpu.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
include/armcortex/m4/: fpu.hpp  mpu.hpp  scb.hpp  special_regs.hpp
intrinsics/: barriers.hpp  byte_reversing.hpp  debugging.hpp  events.hpp  exceptions.hpp  hints.hpp
intrinsics/armv7m/: bit_manipulation.hpp  bit_operations.hpp  exclusive_access.hpp  saturation.hpp  special_regs.hpp
intrinsics/common/: barriers.hpp  byte_reversing.hpp  debugging.hpp  exceptions.hpp  execution_hints.hpp  hints.hpp  power_management.hpp  special_regs.hpp
intrinsics/dsp/: README.md
intrinsics/fpu/: README.md
m0/: exceptions.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
m0plus/: exceptions.hpp  mpu.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
m1/: exceptions.hpp  nvic.hpp  scb.hpp  scnscb.hpp  special_regs.hpp  systick.hpp
m3/: exceptions.hpp  mpu.hpp  nvic.hpp  scb.hpp  special_regs.hpp  systick.hpp
testing/: Makefile  README.md  TEST_COVERAGE.md  build.py  lit.cfg.py  requirements.txt  vcpkg-configuration.json
testing/tests/: utils_edge_cases_test.cpp  utils_test.cpp
testing/tests/cortexm0/: barriers_test.cpp  nvic_comprehensive_test.cpp  special_regs_edge_cases_test.cpp  special_regs_test.cpp  systick_comprehensive_test.cpp
testing/tests/cortexm0plus/: mpu_comprehensive_test.cpp
testing/tests/integration/: cross_device_comprehensive_test.cpp
tests/: CMakeLists.txt  example.cpp  lit.cfg.py
tests/bit_utils/: CMakeLists.txt  test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set.cpp  test_is_bit_set_compiletime.cpp  test_is_bit_set_runtime.cpp  test_is_bit_set_static.cpp  test_set_bit_compiletime.cpp  test_set_bit_runtime.cpp
tests/bit_utils_v6m/: test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set_runtime.cpp  test_set_bit_runtime.cpp
tests/bit_utils_v7m/: test_clear_bit_compiletime.cpp  test_clear_bit_runtime.cpp  test_is_bit_set_compiletime.cpp  test_is_bit_set_runtime.cpp  test_set_bit_compiletime.cpp  test_set_bit_runtime.cpp
tests/intrinsics/: CMakeLists.txt  test_barriers.cpp  test_bit_operations.cpp  test_byte_reversing.cpp  test_debugging.cpp  test_events.cpp  test_exceptions.cpp  test_exceptions_v7m.cpp  test_exclusive_access.cpp  test_hints.cpp  test_saturation.cpp  test_special_regs_m0.cpp  test_special_regs_m3.cpp
tests/intrinsics/armv7m/: CMakeLists.txt  test_bit_manipulation.cpp  test_bit_operations.cpp  test_exclusive_access.cpp  test_saturation.cpp
tests/intrinsics/common/: CMakeLists.txt  test_barriers.cpp  test_byte_reversing.cpp  test_debugging.cpp  test_exceptions.cpp  test_execution_hints.cpp  test_hints.cpp  test_power_management.cpp
tests/m0/: CMakeLists.txt  test_nvic.cpp  test_scb.cpp  test_special_regs.cpp  test_systick.cpp
tests/m0plus/: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  build_stm32g0.sh  linker_script.ld  main.cpp  startup.S  stm32g0_linker_script.ld  test_exception_numbers.cpp  test_mpu.cpp  test_nvic.cpp  test_scb.cpp  test_special_regs.cpp  test_systick.cpp
tests/m0plus/renode/: cortex_m0plus_test_platform.repl  stm32g0_test_platform.repl  test_output_peripheral.py  test_runner.resc  test_runner_monitor.resc  test_runner_simple.resc  test_runner_stm32g0.resc
tests/m0plus/robot/: cortex_m0plus_tests.robot
tests/m1/: CMakeLists.txt  test_nvic.cpp  test_scb.cpp  test_scnscb.cpp  test_special_regs.cpp  test_systick.cpp
tests/m3/: CMakeLists.txt  test_mpu.cpp  test_nvic.cpp  test_scb.cpp  test_special_regs.cpp  test_systick.cpp
